Bug 438743 - Crash after creating new document and immediately closing it
Summary: Crash after creating new document and immediately closing it
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Appimage Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-16 14:25 UTC by Alvin Wong
Modified: 2021-07-07 13:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
output and backtrace (8.74 KB, text/plain)
2021-06-16 14:25 UTC, Alvin Wong
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2021-06-16 14:25:17 UTC
Created attachment 139391 [details]
output and backtrace

Built using AppImage docker, running from inside docker.

Commit e433799c0
Comment 1 Bug Janitor Service 2021-07-07 09:19:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/947
Comment 2 Dmitry Kazakov 2021-07-07 13:46:33 UTC
Git commit 2da7975979d0eb1b2a7ad0533e36e3547ae32597 by Dmitry Kazakov, on behalf of Lucid Sunlight.
Committed on 07/07/2021 at 13:45.
Pushed by dkazakov into branch 'master'.

Don't crash in animation timeline when rapidly creating and closing new documents

M  +2    -0    plugins/dockers/animation/KisAnimTimelineFramesModel.cpp

https://invent.kde.org/graphics/krita/commit/2da7975979d0eb1b2a7ad0533e36e3547ae32597
Comment 3 Dmitry Kazakov 2021-07-07 13:46:41 UTC
Git commit f69482b81e23032e658b5679a282217c82c37a36 by Dmitry Kazakov, on behalf of Lucid Sunlight.
Committed on 07/07/2021 at 13:45.
Pushed by dkazakov into branch 'master'.

Don't crash in small color selector when rapidly creating and closing new documents

This relies on `SmallColorSelectorDock::setCanvas` and `unsetCanvas`
to enable/disable the widget when canvas is null.

M  +1    -1    plugins/dockers/smallcolorselector/kis_small_color_widget.cc

https://invent.kde.org/graphics/krita/commit/f69482b81e23032e658b5679a282217c82c37a36