Don't crash in animation timeline when rapidly creating and closing new documents

BUG:438743